--- a/count_model_size.ipynb
+++ b/count_model_size.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGG11: 35.21MB\n",
+      "VGG13: 35.92MB\n",
+      "VGG16: 56.18MB\n",
+      "VGG19: 76.45MB\n",
+      "ResNet18: 42.63MB\n",
+      "ResNet34: 81.18MB\n",
+      "ResNet50: 89.72MB\n",
+      "ResNet101: 162.17MB\n",
+      "ResNet152: 221.85MB\n"
+     ]
+    }
+   ],
    "source": [
     "from models import select_model\n",
     "from utils import count_parameters\n",
@@ -18,8 +34,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
