添加了ViT模型

--- a/count_model_size.ipynb
+++ b/count_model_size.ipynb
@@ -2,35 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T17:16:03.729231Z",
+     "start_time": "2024-06-14T17:15:59.672848Z"
+    }
+   },
+   "source": [
+    "from models import select_model\n",
+    "from utils import count_parameters\n",
+    "\n",
+    "models = [\"VGG11\", \"VGG13\", \"VGG16\", \"VGG19\", \"ResNet18\", \"ResNet34\", \"ResNet50\", \"ResNet101\", \"ResNet152\",\"VisionTransformer\"]\n",
+    "\n",
+    "for model_name in models:\n",
+    "    model = select_model(model_name,\"dogs_vs_cats\")\n",
+    "    print(f\"{model_name}: {count_parameters(model, True):.2f}MB\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VGG11: 35.21MB\n",
-      "VGG13: 35.92MB\n",
-      "VGG16: 56.18MB\n",
-      "VGG19: 76.45MB\n",
-      "ResNet18: 42.63MB\n",
-      "ResNet34: 81.18MB\n",
-      "ResNet50: 89.72MB\n",
-      "ResNet101: 162.17MB\n",
-      "ResNet152: 221.85MB\n"
+      "VGG11: 35.39MB\n",
+      "VGG13: 36.09MB\n",
+      "VGG16: 56.36MB\n",
+      "VGG19: 76.62MB\n",
+      "ResNet18: 42.80MB\n",
+      "ResNet34: 81.36MB\n",
+      "ResNet50: 138.65MB\n",
+      "ResNet101: 211.10MB\n",
+      "ResNet152: 270.77MB\n",
+      "VisionTransformer: 492.47MB\n"
      ]
     }
    ],
-   "source": [
-    "from models import select_model\n",
-    "from utils import count_parameters\n",
-    "\n",
-    "models = [\"VGG11\", \"VGG13\", \"VGG16\", \"VGG19\", \"ResNet18\", \"ResNet34\", \"ResNet50\", \"ResNet101\", \"ResNet152\"]\n",
-    "\n",
-    "for model_name in models:\n",
-    "    model = select_model(model_name)\n",
-    "    print(f\"{model_name}: {count_parameters(model, True):.2f}MB\")"
-   ]
+   "execution_count": 1
   }
  ],
  "metadata": {
